--- a/SpringBoot-Inventory/src/main/resources/application.properties
+++ b/SpringBoot-Inventory/src/main/resources/application.properties
@@ -2,8 +2,9 @@ spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 spring.mvc.static-path-pattern=/resources/static/**
 spring.resources.add-mappings=true
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/crm
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/inventory
 spring.datasource.username=root
 spring.datasource.password=root
-logging.level.root=WARN
+#logging.level.root=WARN
