--- a/SpringBoot-Inventory/src/main/resources/application.properties
+++ b/SpringBoot-Inventory/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=9090
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 spring.mvc.static-path-pattern=/resources/static/**
@@ -8,3 +9,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/inventory
 spring.datasource.username=root
 spring.datasource.password=root
 #logging.level.root=WARN
+
+server.servlet.context-path=/inventory
