--- a/SpringBoot-Inventory/src/main/resources/application.properties
+++ b/SpringBoot-Inventory/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-server.port=9090
+#server.port=9090
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 spring.mvc.static-path-pattern=/resources/static/**
 spring.resources.add-mappings=true
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/inventory
+spring.datasource.url=jdbc:mysql://localhost:3306/inventory?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 #logging.level.root=WARN
-
-server.servlet.context-path=/inventory
+server.servlet.context-path=/ims
